Fix contrast issues

--- a/volunteer/ameri-steam/css/main.css
+++ b/volunteer/ameri-steam/css/main.css
@@ -50,6 +50,7 @@ a:hover {
 /* Header */
 .header {
     z-index: 2;
+    --bs-body-bg: var(--bs-dark);
 }
 
 /* Flyout Navbar Section */
